tests/ui/hole_in_enum_index_array.stderr
error[E0412]: cannot find type `Foo` in this scope
 --> tests/ui/hole_in_enum_index_array.rs:4:25
  |
4 |     let arr: IndexArray<Foo, _, 3> = index_array! {
  |                         ^^^ not found in this scope

error[E0308]: mismatched types
 --> tests/ui/hole_in_enum_index_array.rs:4:38
  |
4 |       let arr: IndexArray<Foo, _, 3> = index_array! {
  |  ______________________________________^
5 | |         0 => 2,
6 | |         2 => 3,
7 | |     };
  | |     ^
  | |     |
  | |_____expected an array with a size of 3, found one with a size of 2
  |       arguments to this function are incorrect
  |
  = note: expected array `[_; 3]`
             found array `[{integer}; 2]`
note: associated function defined here
 --> src/index_array.rs
  |
  |     pub const fn new(data: [T; N]) -> Self {
  |                  ^^^
  = note: this error originates in the macro `index_array` (in Nightly builds, run with -Z macro-backtrace for more info)
